# geronimo

./: 404.html  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: pylint.yml  python-package.yml  python-publish.yml
contributing/: index.html
docs/: index.md  installation.md  point.md  util.md  vector.md
documentation/: index.html
installation/: index.html
point/: index.html
search/: search_index.json
src/geronimo/: __init__.py
src/geronimo/geometry/: __init__.py  point.py  vector.py
src/geronimo/util/: __init__.py
tests/: test_points.py  test_utils.py  test_vectors.py
util/: index.html
vector/: index.html
