[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geronimo"
version = "0.0.1"
description = "Minimal and easy-to-learn math library for quick calculations, written in pure Python."
readme = "README.md"
authors = [{ name = "Magnus Schlinsog", email = "magnusschlinsog@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["math", "geometry", "vectors", "3d"]
dependencies = []
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "pylint", "mkdocs", "mkdocs-material", "mkdocstrings[python]", "python-dotenv"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[project.urls]
GitHub = "https://github.com/mags0ft/geronimo"
Homepage = "https://mags0ft.github.io/geronimo/"
